fix: fix z-indexes

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -28,6 +28,9 @@
 
   // z-indexes
   --modal-z-index: 10;
+  --sidebar-btn-z-index: 5;
+  --listbox-z-index: 3;
+  --dropdown-z-index: 3;
 
   // Colors
   --overlay-color: rgba(0 0 0 / 60%);
