--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -19,6 +19,7 @@
   position: absolute;
   right: -32px;
   bottom: 32px;
+  z-index: var(--sidebar-btn-z-index);
 }
 
 .items {
